T Compiler/tests/phase3tests/error/fieldrefRuntimeError2.t
class A
{
  int i;
}

int main()
{
   A a;

   a = null;

   a.i = 17;
}
 
